Update hangman.java